# holoscan-vla-work

./: .gitignore  README.md  install_robot_deps.sh  linux_imx274_player.py  linux_imx274_player_v4l2_sink.py  run.sh  test_udp_listener.py  thor_send_payload.py
calibration/robots/so_follower/: my_awesome_follower_arm.json
calibration/teleoperators/so_leader/: my_leader.json
experiments/: inference-reliability-factors.md
inference/: eval_dual_usb.py  preview_cameras.py  run_server.sh
notes/: 2026-04-16_zmq-recording-pipeline-and-dataset-setup.md  thor_send_payload_debugging.md
notes/2026-04-16/: arm-rescue-torque-off-script.md  hsb-udp-payload-sender-debugging.md  reset-phase-and-gui-panel-improvements.md
notes/2026-04-18/: arm-rescue-torque-off-script.md  recording-preview-window-and-ux-improvements.md  reset-phase-and-gui-panel-improvements.md
notes/2026-04-22/: dual-usb-camera-training-debug-log.md  run-training-on-3090.md  setup-3090-from-scratch.md  training-fixes-and-power-management.md  transfer-training-to-3090.md
notes/2026-04-23/: dataloader-cpu-and-video-backend-explained.md  groot-training-debug-and-run.md
notes/2026-04-24/: fixed-cube-v1-training-completed.md  fixed-cube-v1-training-run.md
payload/: thor_send_payload_with_ecb.py
payload_generator_op/: CMakeLists.txt  build.sh  payload_generator_op.cpp  payload_generator_op.hpp  payload_generator_op_pybind.cpp
pipeline/: imx274_zmq_server.py  linux_imx274_player.py
recording/: imx274_lerobot_record.py  torque_off.py  usb_dual_cam_record.py
training/: convert_v3_to_v2.py  finetune.sh  finetune_dual_usb.sh  launch_finetune_ffmpeg.py  so101_dual_usb_config.py  so101_imx274_config.py  transcode_av1_to_h264.py
